force-app/main/default/objects/Scheme_Eligibility__c/Scheme_Eligibility__c.object-meta.xml
<CustomObject>
    <label>Scheme Eligibility</label>
    <pluralLabel>Scheme Eligibilities</pluralLabel>
    <nameField>
        <displayFormat>ELIG-{0000}</displayFormat>
        <label>Eligibility No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>