force-app/main/default/objects/Scheme_Eligibility__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>General Trade</fullName>
                </value>
                <value>
                    <fullName>Modern Trade</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>