force-app/main/default/objects/Scheme_Eligibility__c/fields/Distributor_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Type__c</fullName>
    <label>Distributor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>DB-RT</fullName>
                </value>
                <value>
                    <fullName>DB-M</fullName>
                </value>
                <value>
                    <fullName>DB-Wh</fullName>
                </value>
                <value>
                    <fullName>DB-SA</fullName>
                </value>
                <value>
                    <fullName>DB-I</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>