force-app/main/default/objects/Scheme_Eligibility__c/fields/Outlet_Tag__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Tag__c</fullName>
    <label>Outlet Tag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Alpha</fullName>
                </value>
                <value>
                    <fullName>Non-Alpha</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>