force-app/main/default/objects/Scheme_Eligibility__c/fields/Outlet_Type__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Type__c</fullName>
    <label>Outlet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>