force-app/main/default/objects/Scheme_Eligibility__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Lookup</type>
    <referenceTo>Geography__c</referenceTo>
    <relationshipLabel>Scheme Eligibilities</relationshipLabel>
    <relationshipName>Scheme_Eligibilities</relationshipName>
</CustomField>